--- a/p/po/pok/pokerpages.com.html
+++ b/p/po/pok/pokerpages.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pokerpages.com privacy policy that was archived on 2013-10-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131014012852id_/http%3A//www.pokerpages.com/legal/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pokerpages.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223143805id_/http%3A//www.pokerpages.com/legal/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en-US"><head>
 <title>Poker Pages - Poker Articles, Tournaments, &amp; Directory</title>
@@ -44,12 +44,12 @@
 
 <a href="http://www.pokerpages.com/" title="PokerPages"><img src="http://www.pokerpages.com/images/pokerpages-logo.gif" border="0" height="65" width="221" title="PokerPages"></a><div class="pokerstarsbuttonholder">
 <div class="topbuttonlink">
-<a href="http://www.pokerpages.com/ballyhoo/adclick.php?bannerid=5950&amp;zoneid=0&amp;source=&amp;dest=http%3A%2F%2Fwww.pokerstars.com%2F%3Fsource%3D10303626" target="_target" class="topbuttonlink">PokerStars</a><span id="beacon_5950" style="position:absolute;left:0px;top:0px;visibility:hidden;padding:0px;margin:0px;"><img src="http://www.pokerpages.com/ballyhoo/adlog.php?bannerid=5950&amp;clientid=57359&amp;zoneid=0&amp;source=&amp;block=0&amp;capping=0&amp;cb=65c2559bf2f62d0d4d457476ed022ffb" width="0" height="0" alt="" style="width: 0px; height: 0px;"></span></div>
+<a href="http://www.pokerpages.com/ballyhoo/adclick.php?bannerid=5950&amp;zoneid=0&amp;source=&amp;dest=http%3A%2F%2Fwww.pokerstars.com%2F%3Fsource%3D10303626" target="_target" class="topbuttonlink">PokerStars</a><span id="beacon_5950" style="position:absolute;left:0px;top:0px;visibility:hidden;padding:0px;margin:0px;"><img src="http://www.pokerpages.com/ballyhoo/adlog.php?bannerid=5950&amp;clientid=57359&amp;zoneid=0&amp;source=&amp;block=0&amp;capping=0&amp;cb=f98231dd60c93b5741758e4e8c41303e" width="0" height="0" alt="" style="width: 0px; height: 0px;"></span></div>
 </div>
 
 <div class="learnpokerbuttonholder">
 <div class="topbuttonlink">
-<a href="http://www.pokerpages.com/ballyhoo/adclick.php?bannerid=5949&amp;zoneid=0&amp;source=&amp;dest=http%3A%2F%2Fwww.pokerschoolonline.com%2F%3Fsource%3D10346872" target="_blank" class="topbuttonlink">Learn Poker</a><span id="beacon_5949" style="position:absolute;left:0px;top:0px;visibility:hidden;padding:0px;margin:0px;"><img src="http://www.pokerpages.com/ballyhoo/adlog.php?bannerid=5949&amp;clientid=57359&amp;zoneid=0&amp;source=&amp;block=0&amp;capping=0&amp;cb=c89603a7ef0232d66297b470896ea1a0" width="0" height="0" alt="" style="width: 0px; height: 0px;"></span></div>
+<a href="http://www.pokerpages.com/ballyhoo/adclick.php?bannerid=5949&amp;zoneid=0&amp;source=&amp;dest=http%3A%2F%2Fwww.pokerschoolonline.com%2F%3Fsource%3D10346872" target="_blank" class="topbuttonlink">Learn Poker</a><span id="beacon_5949" style="position:absolute;left:0px;top:0px;visibility:hidden;padding:0px;margin:0px;"><img src="http://www.pokerpages.com/ballyhoo/adlog.php?bannerid=5949&amp;clientid=57359&amp;zoneid=0&amp;source=&amp;block=0&amp;capping=0&amp;cb=2c41a6d16bd82c5d10de8d217f7ffb7b" width="0" height="0" alt="" style="width: 0px; height: 0px;"></span></div>
 </div>
 
 
@@ -88,21 +88,25 @@
 
 <div class="tournamentbar">
 <ul class="tournamentmenu">
-<li class="itemline">Major Tournaments:</li>
+<li class="itemline">Major Events:</li>
 <li><a class="item2" href="http://www.pokerpages.com/tournament/" title="Daily Poker Tournament Schedules">Daily</a></li>
 <li><a class="item2" href="http://www.pokerpages.com/tournament/recentschedules.php3" title="New Poker Tournament Schedules">New</a></li>
 <li>
-<a class="item2" href="http://www.pokerpages.com/tournament/majorlisting.php3?Month=9&amp;Year=2013" title="September 2013's Poker Tournaments">Last Month</a></li>
+<a class="item2" href="http://www.pokerpages.com/tournament/majorlisting.php3?Month=1&amp;Year=2014" title="January 2014's Poker Tournaments">Last Month</a></li>
 <li>
-<a class="item2" href="http://www.pokerpages.com/tournament/majorlisting.php3?Month=10&amp;Year=2013" title="October 2013 Poker Tournaments">This Month</a></li>
+<a class="item2" href="http://www.pokerpages.com/tournament/majorlisting.php3?Month=2&amp;Year=2014" title="February 2014 Poker Tournaments">This Month</a></li>
 <li>
-<a class="item2" href="http://www.pokerpages.com/tournament/majorlisting.php3?Month=11&amp;Year=2013" title="November 2013 Poker Tournament Schedule">Next Month</a></li>
+<a class="item2" href="http://www.pokerpages.com/tournament/majorlisting.php3?Month=3&amp;Year=2014" title="March 2014 Poker Tournament Schedule">Next Month</a></li>
 <li><a class="item2" href="http://www.pokerpages.com/pokerinfo/tournamentgallery/wsop/wsop.htm" title="World Series of Poker">WSOP</a></li>
 <li><a class="item2" href="http://www.pokerpages.com/pokerinfo/tournamentgallery/wsop/wsop-europe-tour.htm" title="World Series of Poker Europe">WSOPE</a></li>
 <li><a class="item2" href="http://www.pokerpages.com/pokerinfo/tournamentgallery/wpt/index.htm" title="World Poker Tour">WPT</a></li>
 
 
 <li class="itemline">PokerStars Events:</li>
+
+
+
+<li><a class="item2" href="http://www.pokerpages.com/pokerinfo/tournamentgallery/ipt/index.htm" title="European Poker Tour">IPT</a></li>
 
 
 <li><a class="item2" href="http://www.pokerpages.com/pokerinfo/tournamentgallery/napt/index.htm" title="European Poker Tour">NAPT</a></li>
@@ -128,14 +132,14 @@
 
 <div class="bannerinside ">
 
-<div class="leftcol bannerleft"><a href="http://www.pokerpages.com/ballyhoo/adclick.php?bannerid=5935&amp;zoneid=0&amp;source=&amp;dest=http%3A%2F%2Fwww.pokerschoolonline.com%2F%3Fsource%3D10346880" target="_blank"><img src="http://www.pokerpages.com/ballyhoo/adimage.php?filename=skillleague-long2.jpg&amp;contenttype=jpeg" width="728" height="90" alt="PSO Skill League" title="PSO Skill League" border="0"></a><span id="beacon_5935" style="position:absolute;left:0px;top:0px;visibility:hidden;padding:0px;margin:0px;"><img src="http://www.pokerpages.com/ballyhoo/adlog.php?bannerid=5935&amp;clientid=57356&amp;zoneid=0&amp;source=&amp;block=0&amp;capping=0&amp;cb=87d8134d2768468fd421be0d6af0d806" width="0" height="0" alt="" style="width: 0px; height: 0px;"></span></div>
+<div class="leftcol bannerleft"><a href="http://www.pokerpages.com/ballyhoo/adclick.php?bannerid=5935&amp;zoneid=0&amp;source=&amp;dest=http%3A%2F%2Fwww.pokerschoolonline.com%2F%3Fsource%3D10346880" target="_blank"><img src="http://www.pokerpages.com/ballyhoo/adimage.php?filename=skillleague-long2.jpg&amp;contenttype=jpeg" width="728" height="90" alt="PSO Skill League" title="PSO Skill League" border="0"></a><span id="beacon_5935" style="position:absolute;left:0px;top:0px;visibility:hidden;padding:0px;margin:0px;"><img src="http://www.pokerpages.com/ballyhoo/adlog.php?bannerid=5935&amp;clientid=57356&amp;zoneid=0&amp;source=&amp;block=0&amp;capping=0&amp;cb=847c083e2a709213e15a2d49507e639d" width="0" height="0" alt="" style="width: 0px; height: 0px;"></span></div>
 
 <div class="rightcol bannerright">
 
 
 
 
-<div class="industrybox"><a href="http://www.pokerpages.com/ppii/" title="Poker Industry Index" target="_blank"><img src="/images/pokerindustryindex.jpg" border="0" title="Poker Industry Index"></a><div class="industryboxlink"><a href="http://www.pokerpages.com/ppii/" title="Poker Total Buyins" class="industryboxlink2" target="_blank">$6,321,853,710</a></div></div>
+<div class="industrybox"><a href="http://www.pokerpages.com/ppii/" title="Poker Industry Index" target="_blank"><img src="/images/pokerindustryindex.jpg" border="0" title="Poker Industry Index"></a><div class="industryboxlink"><a href="http://www.pokerpages.com/ppii/" title="Poker Total Buyins" class="industryboxlink2" target="_blank">$6,577,902,769</a></div></div>
 
 
 
@@ -449,7 +453,7 @@ like_it();
 
 
 
-<a href="http://www.pokerpages.com/ballyhoo/adclick.php?bannerid=5951&amp;zoneid=0&amp;source=&amp;dest=http%3A%2F%2Fwww.pokerstars.com%2F%3Fsource%3D10346476" target="_blank"><img src="http://www.pokerpages.com/ballyhoo/adimage.php?filename=newdownload-botton.gif&amp;contenttype=gif" width="150" height="113" alt="PokerStars Download" title="PokerStars Download" border="0"></a><span id="beacon_5951" style="position:absolute;left:0px;top:0px;visibility:hidden;padding:0px;margin:0px;"><img src="http://www.pokerpages.com/ballyhoo/adlog.php?bannerid=5951&amp;clientid=57359&amp;zoneid=0&amp;source=&amp;block=0&amp;capping=0&amp;cb=19b1f8c4e2419496eaa53a320f844d48" width="0" height="0" alt="" style="width: 0px; height: 0px;"></span>
+<a href="http://www.pokerpages.com/ballyhoo/adclick.php?bannerid=5951&amp;zoneid=0&amp;source=&amp;dest=http%3A%2F%2Fwww.pokerstars.com%2F%3Fsource%3D10346476" target="_blank"><img src="http://www.pokerpages.com/ballyhoo/adimage.php?filename=newdownload-botton.gif&amp;contenttype=gif" width="150" height="113" alt="PokerStars Download" title="PokerStars Download" border="0"></a><span id="beacon_5951" style="position:absolute;left:0px;top:0px;visibility:hidden;padding:0px;margin:0px;"><img src="http://www.pokerpages.com/ballyhoo/adlog.php?bannerid=5951&amp;clientid=57359&amp;zoneid=0&amp;source=&amp;block=0&amp;capping=0&amp;cb=eb56e1a42a27cf4954fce47a91e34369" width="0" height="0" alt="" style="width: 0px; height: 0px;"></span>
 
 
 
@@ -492,7 +496,8 @@ like_it();
 
 <div class="fp-header">Online Poker</div>
 <div class="sidelinks">
-<a href="http://www.pokerpages.com/ballyhoo/adclick.php?bannerid=5924&amp;zoneid=0&amp;source=&amp;dest=http%3A%2F%2Fwww.pokerstars.com%2F%3Fsource%3D10304756" target="_blank"><img src="http://www.pokerpages.com/ballyhoo/adimage.php?filename=pokerstars12.jpg&amp;contenttype=jpeg" width="135" height="35" alt="PokerStars" title="PokerStars" border="0"></a><span id="beacon_5924" style="position:absolute;left:0px;top:0px;visibility:hidden;padding:0px;margin:0px;"><img src="http://www.pokerpages.com/ballyhoo/adlog.php?bannerid=5924&amp;clientid=57356&amp;zoneid=0&amp;source=&amp;block=0&amp;capping=0&amp;cb=43de9e2fd5d547cbc65d25b0db08f07d" width="0" height="0" alt="" style="width: 0px; height: 0px;"></span><br><br>
+<a href="http://www.pokerpages.com/ballyhoo/adclick.php?bannerid=5910&amp;zoneid=0&amp;source=&amp;dest=http%3A%2F%2Fwww.pokerstars.com%2F%3Fsource%3D10304756" target="_blank"><img src="http://www.pokerpages.com/ballyhoo/adimage.php?filename=pokerstars_com_logo.gif&amp;contenttype=gif" width="135" height="35" alt="PokerStars" title="PokerStars" border="0"></a><span id="beacon_5910" style="position:absolute;left:0px;top:0px;visibility:hidden;padding:0px;margin:0px;"><img src="http://www.pokerpages.com/ballyhoo/adlog.php?bannerid=5910&amp;clientid=57356&amp;zoneid=0&amp;source=&amp;block=0&amp;capping=0&amp;cb=fe81d67bf62f530bfba541d116f119fd" width="0" height="0" alt="" style="width: 0px; height: 0px;"></span><br><a href="http://www.pokerpages.com/ballyhoo/adclick.php?bannerid=5923&amp;zoneid=0&amp;source=&amp;dest=http%3A%2F%2Fwww.pokerstars.com%2F%3Fsource%3D10346831" target="_blank" class="sidemenu_links"><b style="color:red;">Sunday Million</b><br>
+<b style="color:red;text-align:center;">$1,000,000 Guaranteed</b></a><span id="beacon_5923" style="position:absolute;left:0px;top:0px;visibility:hidden;padding:0px;margin:0px;"><img src="http://www.pokerpages.com/ballyhoo/adlog.php?bannerid=5923&amp;clientid=57356&amp;zoneid=0&amp;source=&amp;block=0&amp;capping=0&amp;cb=2748d064098d97b5a3d8b333e5819e24" width="0" height="0" alt="" style="width: 0px; height: 0px;"></span><br>
 </div>
 
 
@@ -518,7 +523,7 @@ like_it();
 <div class="fp-header">Top Tournaments</div>
 <div class="sidelinks">
 
-<a href="/tournament/schedule6082.htm" class="left_td02">World Series of Poker Circuit Event</a><br><a href="/tournament/schedule6009.htm" class="left_td02">Asian Poker Tour Macau (APT) </a><br><a href="/tournament/schedule6071.htm" class="left_td02">bwin WPT National Barcelona / Season 12</a><br>
+<a href="/tournament/schedule6238.htm" class="left_td02">LA Poker Classic / WPT Event Season 12</a><br><a href="/tournament/schedule6345.htm" class="left_td02">Fallsview Poker Classic WPT Event /...</a><br><a href="/tournament/schedule6113.htm" class="left_td02">Pokerstars.com ANZPT Auckland / Season 6</a><br>
 </div>
 
 <br><br>
@@ -563,7 +568,7 @@ like_it();
 </div></div><div class="copyright"><a href="http://www.pokerpages.com/legal/terms.htm" title="Terms &amp; Conditions of Use Terms" class="copyrightlink">Usage Terms</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="http://www.pokerpages.com/legal/privacy.htm" title="Privacy Policy" class="copyrightlink">Privacy Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="http://www.pokerpages.com/legal/copyright.htm" title="Copyright Notice" class="copyrightlink">Copyright Notice</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="http://www.pokerpages.com/sitemap.htm" title="Poker Pages Site Map" class="copyrightlink">Site Map</a> 
 
 <br>
-All Poker and free play poker content ©2013 PokerPages.com. All rights reserved.<br>If you or someone you know has a gambling problem, visit either:
+All Poker and free play poker content ©2014 PokerPages.com. All rights reserved.<br>If you or someone you know has a gambling problem, visit either:
 <a href="http://www.ncpgambling.org/" title="National Council on Problem Gambling" class="copyrightlink" target="_blank">National Council on Problem Gambling</a> or <a href="http://www.gamblersanonymous.org/" target="_blank" title="Gamblers Anonymous" class="copyrightlink">Gamblers Anonymous International Service</a> 
 
 </div>
