--- a/s/sp/spr/spruz.com.html
+++ b/s/sp/spr/spruz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the spruz.com privacy policy that was archived on 2013-10-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131010081335id_/http%3A//www.spruz.com/%3Fpage%3Dcsm%26cmd%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the spruz.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223161739id_/http%3A//www.spruz.com/%3Fpage%3Dcsm%26cmd%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head>
 <link href="/user/67429/theme/favicon.ico" rel="SHORTCUT ICON">
@@ -10,7 +10,7 @@
 <meta content="-1" http-equiv="Expires">
 
 <meta content="text/html; charset=iso-8859-1" http-equiv="Content-Type">
-<title>Spruz Create your own Free Social Website</title>
+<title>Spruz </title>
 
 
 <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://yui.yahooapis.com/combo?3.3.0/build/yui/yui-min.js&amp;3.3.0/build/oop/oop-min.js&amp;3.3.0/build/event-custom/event-custom-min.js&amp;3.3.0/build/dom/dom-base-min.js&amp;3.3.0/build/dom/selector-native-min.js&amp;3.3.0/build/dom/selector-css2-min.js&amp;3.3.0/build/event/event-min.js&amp;3.3.0/build/node/node-base-min.js&amp;3.3.0/build/event/event-base-ie-min.js"></script>
@@ -50,7 +50,7 @@
 <link href="/dhtml/corestyle/xstyle.css" media="screen" rel="stylesheet" type="text/css">
 
 <style id="corestaticcss" media="screen" type="text/css">
-@import url('/user/67429/theme/design/spruz4/style.css?20131010031740');
+@import url('/user/67429/theme/design/spruz4/style.css?2014223104929');
 </style>
 
 <link href="/dhtml/sui.css" media="screen" rel="stylesheet" type="text/css">
@@ -630,13 +630,13 @@ document.write('<style media="all" type="text/css">#SUI-wblnks, #SUI-Designer{di
 		<div id="page-ol3"><span></span></div>
 		<div id="page-ol4"><span></span></div>
 		<div id="page-ol5"><span></span></div>
-<script language="javascript" src="/files/com/call.asp?page=stats&amp;instance_id=spruz_web_site&amp;site_id=67429&amp;muid=ip:108.174.56.71&amp;lastpage=%2FDefault%2Easp%3Fpage%3Dcsm%26cmd%3Dprivacy%26cachecommand%3Dbypass&amp;loadtime=0.14" defer="defer" async="true"></script>
+<script language="javascript" src="/files/com/call.asp?page=stats&amp;instance_id=spruz_web_site&amp;site_id=67429&amp;muid=ip:108.174.56.71&amp;lastpage=%2FDefault%2Easp%3Fpage%3Dcsm%26cmd%3Dprivacy%26cachecommand%3Dbypass&amp;loadtime=0.16" defer="defer" async="true"></script>
 
 
 
 
 
 
-<!--Load Time: 0.14 second(s)-->
+<!--Load Time: 0.16 second(s)-->
 
 <div id="sm2-container" class="movieContainer" style="position: absolute; width: 8px; height: 8px; top: -9999px; left: -9999px;"><embed name="sm2movie" id="sm2movie" src="/dhtml/soundmanager/swf/soundmanager2.swf" width="100%" height="100%" quality="high" allowscriptaccess="always" bgcolor="#ffffff" pluginspage="https://web.archive.org/web/20100524105938/http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" allowfullscreen="false"></div></body></html>
