--- a/c/ci/cin/cinfuserver.com.html
+++ b/c/ci/cin/cinfuserver.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cinfuserver.com privacy policy that was archived on 2013-05-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130530185557id_/http%3A//www.cinfu.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cinfuserver.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223183157id_/http%3A//www.cinfu.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -50,16 +50,17 @@
 		<div id="topbox">
 		<form id="form1" name="chcur" method="post" action="http://www.cinfu.com/privacy">
 		Change currency:
-		<select name="currency" onchange="this.form.submit();">
+		<select name="currency" onchange="this.form.submit();" style="width: 50px">
 						<option value="eur">EUR</option>
 						<option value="usd" selected="selected">USD</option>
 						<option value="rub">RUB</option>
-						<option value="lvl">LVL</option>
 						<option value="ltl">LTL</option>
 						<option value="pln">PLN</option>
 						<option value="gbp">GBP</option>
 						<option value="btc">BTC</option>
 						<option value="ltc">LTC</option>
+						<option value="ftc">FTC</option>
+						<option value="doge">DOGE</option>
 					</select>
 		</form>
 		</div>
@@ -85,7 +86,7 @@ Also, we may collect URL from which you linked into our site and your IP address
 			</p>
 <h3>Customer Information</h3>
 <p>
-We do not, and have never, sold or disseminated (except in cases where required to by law by law enforcement agencies) the personal information of our customers to any parties outside of CINFU HOSTING SOLUTIONS, or its parent company, Closco Ltd.<br>
+We do not, and have never, sold or disseminated (except in cases of fraud and where required to by law by law enforcement agencies) the personal information of our customers to any parties outside of CINFU HOSTING SOLUTIONS, or its parent company, Closco Ltd.<br>
 We use customer information for creating and maintaning customers accounts and services. To connect to our customers in case of problems related to their accounts and services. To provide technical support.<br>
 Please note that all contact information you provide to us for domain name registration may be viewed by third parties and available for public on domain Whois services.
 </p>
@@ -107,10 +108,10 @@ Please note that all contact information you provide to us for domain name regis
 <b>Secure online payments provided by 2Checkout.com, Inc.</b>
 </p>
 <ul id="payment-list">
-		<li><a href="http://www.2checkout.com"><img src="http://www.2checkout.com/images/paymentlogoshorizontal.png" alt="2Checkout.com is a worldwide leader in payment services"></a></li><br>
-		<li><a target="_blank" href="https://panel.cinfu.com/knowledgebase/4/SMS-Payments.html"><img src="/images/sms.gif" border="0" alt="SMS Payment"></a></li>		<li><a target="_blank" href="http://perfectmoney.com/"><img src="/images/perfectmoney.gif" border="0" alt="Perfect Money"></a></li>				<li><a target="_blank" href="http://www.bitcoin.org/"><img src="/images/bitcoin.gif" border="0" alt="Bitcoin"></a></li>		<li><a target="_blank" href="http://www.wmtransfer.com/"><img src="/images/webmoney.gif" border="0" alt="WebMoney"></a></li>		<li><a target="_blank" href="http://www.payza.com/"><img src="/images/payza.gif" border="0" alt="Payza"></a></li>		<li><a target="_blank" href="http://www.cashu.com/"><img src="/images/cashu.gif" border="0" alt="cashU"></a></li>				<li><a target="_blank" href="http://www.skrill.com/"><img src="/images/skrill.gif" border="0" alt="Skrill Moneybookers"></a></li><br>
-		<li><a target="_blank" href="http://www.pecunix.com/"><img src="/images/pecunix.gif" border="0" alt="Pecunix"></a></li>		<li><a target="_blank" href="http://litecoin.org/"><img src="/images/litecoin.gif" border="0" alt="Litecoin"></a></li>						<li><a target="_blank" href="http://www.egopay.com/"><img src="/images/egopay.gif" border="0" alt="EGOPAY"></a></li>		<li><a target="_blank" href="http://www.okpay.com/"><img src="/images/okpay.gif" border="0" alt="OKPAY"></a></li>		<li><a target="_blank" href="https://www.hd-money.com/"><img src="/images/hdmoney.gif" border="0" alt="HD Money"></a></li>		<li><a target="_blank" href="https://www.ukash.com/"><img src="/images/ukash.gif" border="0" alt="ukash"></a></li><br>
-<li><a target="_blank" href="https://www.paysera.com/pay/164660"><img src="/images/paysera.jpg" border="0" alt="paysera.com"></a></li>	</ul>
+		<li><a href="http://www.2checkout.com"><img src="http://www.cinfu.com/images/2co.png" alt="2Checkout.com is a worldwide leader in payment services"></a></li><br>
+		<li><a target="_blank" href="https://www.paysafecard.com/"><img src="/images/paysafecard.gif" border="0" alt="Paysafecard"></a></li>		<li><a target="_blank" href="http://perfectmoney.is/"><img src="/images/perfectmoney.gif" border="0" alt="Perfect Money"></a></li>				<li><a target="_blank" href="http://www.wmtransfer.com/"><img src="/images/webmoney.gif" border="0" alt="WebMoney"></a></li>		<li><a target="_blank" href="http://www.payza.com/"><img src="/images/payza.gif" border="0" alt="Payza"></a></li>		<li><a target="_blank" href="http://www.cashu.com/"><img src="/images/cashu.gif" border="0" alt="cashU"></a></li>				<li><a target="_blank" href="http://www.skrill.com/"><img src="/images/skrill.gif" border="0" alt="Skrill Moneybookers"></a></li><br>
+        <li><a target="_blank" href="https://www.paysera.com/pay/164660"><img src="/images/paysera.jpg" border="0" alt="paysera.com"></a></li>		<li><a target="_blank" href="https://www.qiwi.com/"><img src="/images/qiwi.gif" border="0" alt="qiwi"></a></li>						<li><a target="_blank" href="https://www.paxum.com/"><img src="/images/paxum.gif" border="0" alt="Paxum"></a></li>				<li><a target="_blank" href="http://www.egopay.com/"><img src="/images/egopay.gif" border="0" alt="EGOPAY"></a></li>		<li><a target="_blank" href="http://www.okpay.com/"><img src="/images/okpay.gif" border="0" alt="OKPAY"></a></li>		<li><a target="_blank" href="https://www.ukash.com/"><img src="/images/ukash.gif" border="0" alt="ukash"></a></li><br>
+		<li><a target="_blank" href="http://www.bitcoin.org/"><img src="/images/bitcoin.gif" border="0" alt="Bitcoin"></a></li>		<li><a target="_blank" href="http://litecoin.org/"><img src="/images/litecoin.gif" border="0" alt="Litecoin"></a></li>		<li><a target="_blank" href="http://www.feathercoin.com/"><img src="/images/feathercoin.gif" border="0" alt="Feathercoin"></a></li>		<li><a target="_blank" href="http://dogecoin.com/"><img src="/images/dogecoin.gif" border="0" alt="Dogecoin"></a></li>				<li><a target="_blank" href="https://panel.cinfu.com/knowledgebase/4/SMS-Payments.html"><img src="/images/sms.gif" border="0" alt="SMS Payment"></a></li>	</ul>
 
 </div>
 <div id="fb-root"></div>
