--- a/e/ec/eco/ecommercepartners.net.html
+++ b/e/ec/eco/ecommercepartners.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ecommercepartners.net privacy policy that was archived on 2013-04-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130416070058id_/http%3A//www.ecommercepartners.net/Company/Privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ecommercepartners.net privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223192754id_/http%3A//www.ecommercepartners.net/Company/Privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -38,8 +38,12 @@
     #main_content_box #examples2 #examples2Box_2 p{padding:0px;border:0px;margin:0px;width:166px;height:auto;display:table;float:left;margin-left:8px;margin-right:6px;margin-top:12px;text-align:left;}
     </style>
     <![endif]-->
-	<!-- BEGIN LivePerson Monitor. --><script language="javascript"> var lpMTagConfig = {'lpServer' : "server.iad.liveperson.net",'lpNumber' : "52541837",'lpProtocol' : "http"}; function lpAddMonitorTag(src){if(typeof(src)=='undefined'||typeof(src)=='object'){src=lpMTagConfig.lpMTagSrc?lpMTagConfig.lpMTagSrc:'/hcp/html/mTag.js';}if(src.indexOf('http')!=0){src=lpMTagConfig.lpProtocol+"://"+lpMTagConfig.lpServer+src+'?site='+lpMTagConfig.lpNumber;}else{if(src.indexOf('site=')<0){if(src.indexOf('?')<0)src=src+'?';else src=src+'&';src=src+'site='+lpMTagConfig.lpNumber;}};var s=document.createElement('script');s.setAttribute('type','text/javascript');s.setAttribute('charset','iso-8859-1');s.setAttribute('src',src);document.getElementsByTagName('head').item(0).appendChild(s);} if (window.attachEvent) window.attachEvent('onload',lpAddMonitorTag); else window.addEventListener("load",lpAddMonitorTag,false);</script><!-- END LivePerson Monitor. -->
-<script type="text/javascript" charset="iso-8859-1" src="http://server.iad.liveperson.net/hcp/html/mTag.js?site=52541837"></script></head>
+	<!-- BEGIN LivePerson Monitor. -->
+<script type="text/javascript">
+if(typeof window.lpTag==='undefined'){window.lpTag={site:'52541837',_v:'1.3',protocol:location.protocol,events:{bind:function(app,ev,fn){lpTag.defer(function(){lpTag.events.bind(app,ev,fn)},0)},trigger:function(app,ev,json){lpTag.defer(function(){lpTag.events.trigger(app,ev,json)},1)}},defer:function(fn,fnType){if(fnType==0){this._defB=this._defB||[];this._defB.push(fn)}else if(fnType==1){this._defT=this._defT||[];this._defT.push(fn)}else{this._defL=this._defL||[];this._defL.push(fn)}},load:function(src,chr,id){var t=this;setTimeout(function(){t._load(src,chr,id)},0)},_load:function(src,chr,id){var url=src;if(!src){url=this.protocol+'//'+((this.ovr&&this.ovr.domain)?this.ovr.domain:'lptag.liveperson.net')+'/tag/tag.js?site='+this.site}var s=document.createElement('script');s.setAttribute('charset',chr?chr:'UTF-8');if(id){s.setAttribute('id',id)}s.setAttribute('src',url);document.getElementsByTagName('head').item(0).appendChild(s)},init:function(){this._timing=this._timing||{};this._timing.start=(new Date()).getTime();var that=this;if(window.attachEvent){window.attachEvent('onload',function(){that._domReady('domReady')})}else{window.addEventListener('DOMContentLoaded',function(){that._domReady('contReady')},false);window.addEventListener('load',function(){that._domReady('domReady')},false)}if(typeof(window._lptStop)=='undefined'){this.load()}},_domReady:function(n){if(!this.isDom){this.isDom=true;this.events.trigger('LPT','DOM_READY',{t:n})}this._timing[n]=(new Date()).getTime()}};lpTag.init()}
+</script>
+<!-- END LivePerson Monitor. -->
+<script charset="UTF-8" src="https://lptag.liveperson.net/tag/tag.js?site=52541837"></script></head>
 <body onload="loadPageInfo();headbut=2;headernav(2);">
 
 <div id="site_box">
@@ -269,7 +273,7 @@
             <a class="left_2" href="/Glossary/A.shtml">Website Development Glossary</a>
             <a class="right_1" href="/Company/Privacy.shtml">Privacy</a>
             <a class="right" href="/blog/ecommerce-partners-wins-2008-ad-tech-limelight-award-press-release.html">Awards</a>
-            <a class="right" href="/blog/ecommerce-partners-wins-2008-ad-tech-limelight-award-press-release.html">Press</a>
+            <a class="right" href="/blog/">Press</a>
             <a class="right" href="/Company/Careers.shtml">Careers</a>
             <a class="right" href="/Company/RFP.shtml">Submit an RFP</a>
             <a class="right" href="/Sitemap/">Site Map</a>
@@ -349,6 +353,24 @@ End Kampyle Feedback Form Button -->
 <!-- Conversion Pixel - eCommerce Conversion Tracker - DO NOT MODIFY -->
 <img src="http://ib.adnxs.com/px?id=31292&amp;t=2" width="1" height="1">
 <!-- End of Conversion Pixel -->
+
+<!-- Google Code for Remarketing tag -->
+<!-- Remarketing tags may not be associated with personally identifiable information or placed on pages related to sensitive categories. For instructions on adding this tag and more information on the above requirements, read the setup guide: google.com/ads/remarketingsetup -->
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 1046570289;
+var google_conversion_label = "gc47CJfB3wQQscqF8wM";
+var google_custom_params = window.google_tag_params;
+var google_remarketing_only = true;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1046570289/?value=0&amp;label=gc47CJfB3wQQscqF8wM&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
 
 
             
