--- a/c/ch/cha/charmeddesign.com.html
+++ b/c/ch/cha/charmeddesign.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the charmeddesign.com privacy policy that was archived on 2013-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131224030131id_/http%3A//www.charmeddesign.com/content/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the charmeddesign.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223204203id_/http%3A//www.charmeddesign.com/content/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr" prefix="og: http://ogp.me/ns#"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -14,19 +14,19 @@
 <meta property="og:url" content="http://www.charmeddesign.com/content/privacy-policy">
 <meta property="og:description" content="What information do we collect? We collect information from you when you place an order or subscribe to our newsletter. When ordering or registering on our site, as appropriate, you may be asked to enter your: name, e-mail address, mailing address or phone number. You may, however, visit our site anonymously. What do we use your information for? Any of the information we collect from you may be used in one of the following ways:">
 
-  <link type="text/css" rel="stylesheet" media="all" href="/sites/charmeddesign1012.indiemade.com/files/css/css_c6e09e18704744699b14705d6c1eb6b7.css">
-<link type="text/css" rel="stylesheet" media="print" href="/sites/charmeddesign1012.indiemade.com/files/css/css_4d0dc4e45aeb4e997681f01d86cfe90c.css">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/charmeddesign1012.indiemade.com/files/designkit/designkit-underscore.css?W">
+  <link type="text/css" rel="stylesheet" media="all" href="/sites/charmeddesign1012.indiemade.com/files/css/css_12008641c9817aa3994c2e54fe3789c8.css">
+<link type="text/css" rel="stylesheet" media="print" href="/sites/charmeddesign1012.indiemade.com/files/css/css_cb93cdc8dcfe8949fc098865b9b809d7.css">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/charmeddesign1012.indiemade.com/files/designkit/designkit-underscore.css?n">
 <!--[if IE]>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/underscore/ie.css?W" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/underscore/ie.css?n" />
 <![endif]-->
 <!--[if lte IE 6]>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/underscore/ie6.css?W" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/underscore/ie6.css?n" />
 <![endif]-->
 <!--[if lte IE 5]>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/underscore/ie5.css?W" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/underscore/ie5.css?n" />
 <![endif]-->
-  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/sites/charmeddesign1012.indiemade.com/files/js/js_e3b24272acf13deb4ce16e98d640ed05.js"></script>
+  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="/sites/charmeddesign1012.indiemade.com/files/js/js_851f5267cd7d2edaa775149f4ade0635.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutbound": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip" }, "lightbox2": { "rtl": 0, "file_path": "/(\\w\\w/)sites/charmeddesign1012.indiemade.com/files", "default_image": "/sites/all/modules/lightbox2/images/brokenimage.jpg", "border_size": 10, "font_color": "000", "box_color": "fff", "top_position": "", "overlay_opacity": "0.8", "overlay_color": "000", "disable_close_click": true, "resize_sequence": 0, "resize_speed": 400, "fade_in_speed": 400, "slide_down_speed": 600, "use_alt_layout": false, "disable_resize": 0, "disable_zoom": false, "force_show_nav": false, "show_caption": true, "loop_items": false, "node_link_text": "View Image Details", "node_link_target": false, "image_count": "Image !current of !total", "video_count": "Video !current of !total", "page_count": "Page !current of !total", "lite_press_x_close": "press \x3ca href=\"#\" onclick=\"hideLightbox(); return FALSE;\"\x3e\x3ckbd\x3ex\x3c/kbd\x3e\x3c/a\x3e to close", "download_link_text": "", "enable_login": false, "enable_contact": false, "keys_close": "c x 27", "keys_previous": "p 37", "keys_next": "n 39", "keys_zoom": "z", "keys_play_pause": "32", "display_image_size": "original", "image_node_sizes": "()", "trigger_lightbox_classes": "", "trigger_lightbox_group_classes": "", "trigger_slideshow_classes": "", "trigger_lightframe_classes": "", "trigger_lightframe_group_classes": "", "custom_class_handler": 0, "custom_trigger_classes": "", "disable_for_gallery_lists": true, "disable_for_acidfree_gallery_lists": true, "enable_acidfree_videos": true, "slideshow_interval": 5000, "slideshow_automatic_start": true, "slideshow_automatic_exit": true, "show_play_pause": true, "pause_on_next_click": false, "pause_on_previous_click": true, "loop_slides": false, "iframe_width": 600, "iframe_height": 400, "iframe_border": 1, "enable_video": false } });
@@ -188,7 +188,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
   <div id="footermessage">
     charmed design * 200 river vista drive, #506, atlanta, ga 30339 * 800.285.3951* lori@charmeddesign.com  </div>
   <div id="sitedevelopedby">
-    Powered By <a rel="nofollow" href="http://www.indiemade.com/" target="_blank">IndieMade®</a>  </div>
+    Powered By <a rel="nofollow" href="http://www.indiemade.com/" target="_blank">IndieMade</a>  </div>
 </div>
   </div>
 
@@ -200,17 +200,14 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
 
   
   <div class="content">
-    <script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-17389426-7']);
-  _gaq.push(['_setDomainName', 'none']);
-  _gaq.push(['_setAllowLinker', true]);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+      <!-- This Google Analytics call is for IndieMade global statistics. It does not interfere with other tracking codes. -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-17389426-7', 'indiemade.com');
+  ga('send', 'pageview');
 </script>
   </div>
 
