--- a/t/th/the/theqcamera.com.html
+++ b/t/th/the/theqcamera.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the theqcamera.com privacy policy that was archived on 2013-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225043602id_/http%3A//theqcamera.com//inc/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the theqcamera.com privacy policy that was archived on 2014-02-23.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140223213748id_/http%3A//www.theqcamera.com//inc/privacy-policy.php) for the most accurate reproduction.-->
 
 <html><head></head><body><div id="privary-policy">
  <h2>Privacy Policy</h2>
